# NexusMonitor

./: CMakeLists.txt  README.md
agent/: CMakeLists.txt
agent/src/: AgentApp.cpp  AgentApp.hpp  main.cpp
docs/: CentralWebServer.puml  MonitoringAgent.puml
libs/SysMonitorLib/: CMakeLists.txt
libs/SysMonitorLib/include/: DataTypes.hpp  SysMonitor.hpp
libs/SysMonitorLib/src/: PlatformUtils.hpp  PlatformUtils_Linux.cpp  PlatformUtils_Win.cpp  SysMonitor.cpp
server/: CMakeLists.txt
server/src/: main.cpp
